# ai-agent-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cleanup.bat  cleanup.sh
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml  typescript-lint.yml  typescript-publish.yml  typescript-test.yml
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
python/examples/: README.md
python/examples/langchain/uniswap/: .env.template  README.md  example.py  pyproject.toml
python/examples/langchain/web3/: .env.template  README.md  example.py  pyproject.toml
python/src/adapters/langchain/: README.md  pyproject.toml
python/src/adapters/langchain/radius_adapters/langchain/: __init__.py  adapter.py
python/src/adapters/langchain/radius_adapters/langchain/__tests__/: conftest.py  test_adapter.py
python/src/plugins/erc20/: README.md  pyproject.toml
python/src/plugins/erc20/radius_plugins/erc20/: __init__.py  service.py  token.py
python/src/plugins/erc20/tests/: __init__.py  conftest.py  test_abi.py  test_parameters.py  test_plugin.py  test_service.py  test_token.py
python/src/plugins/jsonrpc/: README.md  pyproject.toml
python/src/plugins/jsonrpc/radius_plugins/jsonrpc/: __init__.py  service.py
python/src/plugins/jsonrpc/tests/: __init__.py  conftest.py  test_parameters.py  test_plugin.py  test_service.py
python/src/plugins/uniswap/: README.md  pyproject.toml
python/src/plugins/uniswap/radius_plugins/uniswap/: __init__.py  service.py
python/src/plugins/uniswap/tests/: conftest.py  test_parameters.py  test_plugin.py  test_service.py  test_uniswap_plugin.py
python/src/radius_ai_agent_sdk/: README.md  pyproject.toml
python/src/radius_ai_agent_sdk/radius/: __init__.py
python/src/radius_ai_agent_sdk/radius/classes/: plugin_base.py  wallet_client_base.py
python/src/radius_ai_agent_sdk/radius/decorators/: tool.py
python/src/radius_ai_agent_sdk/radius/types/: chain.py
python/src/radius_ai_agent_sdk/radius/utils/: snake_case.py
python/src/radius_ai_agent_sdk/tests/: __init__.py  conftest.py  test_chain_type.py  test_get_tools.py  test_plugin_base.py  test_tool_base.py  test_tool_decorator.py  test_utils.py  test_wallet_client_base.py
python/src/wallets/evm/: README.md  pyproject.toml
python/src/wallets/evm/radius_wallets/evm/: __init__.py  evm_smart_wallet_client.py  evm_wallet_client.py  send_eth.py
python/src/wallets/evm/tests/: __init__.py  conftest.py  test_evm_smart_wallet_client.py  test_evm_wallet_client.py  test_send_eth.py  test_types.py
python/src/wallets/web3/: README.md  pyproject.toml
python/src/wallets/web3/radius_wallets/web3/: __init__.py  wallet.py
python/src/wallets/web3/tests/: __init__.py  conftest.py  test_web3_wallet.py
typescript/: .eslintignore  .eslintrc.json  CONTRIBUTING.md  README.md  biome.json  cleanup.bat  cleanup.sh  high-level-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsup.config.base.ts  tsup.config.ts  turbo.json
typescript/examples/: README.md
typescript/examples/langchain/viem/: index.ts  package.json  tsconfig.json
typescript/examples/micropayments-nextjs/: .env.example  README.md  package.json  tailwind.config.js
typescript/examples/micropayments-nextjs/app/: layout.tsx  page.tsx
typescript/examples/micropayments-nextjs/app/api/generate/: route.ts
typescript/examples/micropayments-nextjs/app/demo/: page.tsx
typescript/examples/micropayments-nextjs/components/: ContentDisplay.tsx  PaymentVisualization.tsx  TransactionDetails.tsx
typescript/examples/micropayments/vercel-ai/: .env.example  README.md  biome.json  next.config.js  package.json  tailwind.config.js
typescript/examples/micropayments/vercel-ai/app/: globals.css  layout.tsx  page.tsx
typescript/examples/micropayments/vercel-ai/app/api/generate/: route.ts
typescript/examples/micropayments/vercel-ai/app/demo/: page.tsx
typescript/examples/micropayments/vercel-ai/components/: ContentDisplay.tsx  ContentForm.tsx  PaymentVisualization.tsx  TransactionDetails.tsx
typescript/examples/model-context-protocol/: README.md  package.json  tsconfig.json
typescript/examples/model-context-protocol/src/: index.ts
typescript/examples/vercel-ai/debridge-bridging/: index.ts  package.json
typescript/examples/vercel-ai/viem/: .env.template  README.md  index.ts  package.json
typescript/scripts/: add-prepublish-scripts.js  replace-workspace-refs.js
typescript/src/: index.ts
