[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radius-ai-agent-sdk-monorepo"
version = "0.1.0"
description = "Radius AI Agent SDK is an open-source framework for connecting AI agents to the Radius network"
authors = [{name = "Matt Dionis", email = "matt.dionis@radiustechnologysystems.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["radius", "sdk", "web3", "agents", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python"
Documentation = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python/README.md"
Repository = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python"
Issues = "https://github.com/radiustechsystems/ai-agent-toolkit/issues"
Changelog = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python/CHANGELOG.md"

# This is a monorepo, so we don't list dependencies at the root level
# Instead, each package within the monorepo will have its own dependencies

[tool.setuptools]
# This is a monorepo, so we don't use automatic package discovery at the root level
packages = []

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"
