[tool.poetry]
name = "radius-ai-agent-sdk"
version = "0.1.0"
description = "Radius AI Agent SDK is an open-source framework for connecting AI agents to the Radius network"
authors = ["Matt Dionis <matt.dionis@radiustechnologysystems.com>"]
readme = "README.md"
keywords = ["radius", "sdk", "web3", "agents", "ai"]
homepage = "https://github.com/radiustechsystems/ai-agent-toolkit"
repository = "https://github.com/radiustechsystems/ai-agent-toolkit/tree/main/python"
packages = [
    { include = "radius" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
asyncio = "^3.4.1"
typing-extensions = "^4.12.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/radiustechsystems/ai-agent-toolkit/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[tool.ruff]
line-length = 120
target-version = "py312"
