[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radius-ai-agent-sdk-plugin-erc20"
version = "0.1.0"
description = "Radius plugin for ERC20"
authors = [{name = "Matt Dionis", email = "matt.dionis@radiustechnologysystems.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["radius", "sdk", "web3", "agents", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "radius-ai-agent-sdk>=0.1.0",
    "radius-ai-agent-sdk-wallet-evm>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/radiustechsystems/ai-agent-toolkit"
Documentation = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python/src/plugins/erc20/README.md"
Repository = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python/src/plugins/erc20"
Issues = "https://github.com/radiustechsystems/ai-agent-toolkit/issues"
Changelog = "https://github.com/radiustechsystems/ai-agent-toolkit/blob/main/python/CHANGELOG.md"

[tool.setuptools]
packages = ["radius_plugins.erc20"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"

# Development dependencies can be installed separately with requirements-dev.txt
# or using pip install -e ".[dev]" if you add the section below
[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]
